--- a/index.html
+++ b/index.html
@@ -27,18 +27,13 @@
             <li>
                 <a href="#about">About</a>
             </li>
-            <li>
-                <a href="#experience">Experience</a>
-            </li>
-            <li>
-                <a href="#education">Education</a>
+			<li>
+                <a href="#skills">Skills</a>
             </li>
             <li>
                 <a href="#projects">Projects</a>
             </li>
-            <li>
-                <a href="#skills">Skills</a>
-            </li>
+           
             <li>
                 <a href="#contact">Contact</a>
             </li>
@@ -170,12 +165,12 @@
             <div class="row">
                 
 
-                <div class="project shadow-large">
+                <div class="project shadow-large" style="max-width: 1170px">
                     <div class="project-image">
                         <img src="images/stock.png" style="height: 300px"/>
                     </div>
                     <!-- End .project-image -->
-                    <div class="project-info">
+                    <div class="project-info" style="margin-left: 577px; width: 600px;">
                         <h3>Project Name Here</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
@@ -185,12 +180,12 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
-				<div class="project shadow-large">
+				<div class="project shadow-large"  style="max-width: 1170px">
                     <div class="project-image">
                         <img src="images/sorting-algo.png" style="height: 300px"/>
                     </div>
                     <!-- End .project-image -->
-                    <div class="project-info">
+                    <div class="project-info" style="margin-left: 577px; width: 600px;">
                         <h3>Project Name Here</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
