--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
             <li>Python</li>
             <li>Node.js</li>
             <li>React</li>
+			<li>React Native</li>
             <li>C++</li>
 			<li>Express.js</li>
 			<li>mongoose</li>
@@ -171,9 +172,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info" style="margin-left: 577px; width: 600px;">
-                        <h3>Project Name Here</h3>
+                        <h3>Stock Trading Website</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Website to buy and sell stocks with real-time prices and price histories. 
+							Ability to search for stocks using their unique symbol. 
+							Can track $ balance and stock portfolio. 
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -186,9 +189,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info" style="margin-left: 577px; width: 600px;">
-                        <h3>Project Name Here</h3>
+                        <h3>Sorting Algorithm Visualizer</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Shows various sorting algorithms, including animations to view and understanding the process. Detailed information about how each algorithm works, including complexity. Can change array size and pick algorithm.
                         </p>
                         <a href="#">View Project</a>
                     </div>
