--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am a high motivated software developer. Half-way through my biology degree I began coding and quickly realized that I wanted to pursue a career in Software Development. What I lack for in experience I make up for with quick-learning and a drive to understand the fundamentals of any project I work on.
+                        I am a highly motivated software developer. Half-way through my biology degree I began coding and quickly realized that I wanted to pursue a career in Software Development. What I lack for in experience I make up for with quick-learning and a drive to understand the fundamentals of any project I work on.
 					</p>
                 </div>
             </div>
@@ -176,7 +176,7 @@
 							Ability to search for stocks using their unique symbol. 
 							Can track $ balance and stock portfolio. 
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/DasherDo/stock-trading-bot">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -191,7 +191,7 @@
                         <p>
                             Shows various sorting algorithms, including animations to view and understanding the process. Detailed information about how each algorithm works, including complexity. Can change array size and pick algorithm.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/DasherDo/sorting-algorithm-visualizer">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
