--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am a highly motivated software developer. Half-way through my biology degree I began coding and quickly realized that I wanted to pursue a career in Software Development. What I lack for in experience I make up for with quick-learning and a drive to understand the fundamentals of any project I work on.
+                        I am a highly motivated software developer. 
+						Half-way through my biology degree I began coding and quickly realized that I wanted to pursue a career in Software Development. 
+						I am a quick-learner with a drive for understanding the fundamentals of any project I work on. Whether that be from (examples)
 					</p>
                 </div>
             </div>
@@ -175,8 +177,9 @@
                             Website to buy and sell stocks with real-time prices and price histories. 
 							Ability to search for stocks using their unique symbol. 
 							Can track $ balance and stock portfolio. 
+							Made with the MERN stack. 
                         </p>
-                        <a href="https://github.com/DasherDo/stock-trading-bot">View Project</a>
+                        <a href="https://github.com/DasherDo/stock-trading-bot" target="_blank">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -191,6 +194,20 @@
                         <p>
                             Shows various sorting algorithms, including animations to view and understanding the process. Detailed information about how each algorithm works, including complexity. Can change array size and pick algorithm.
                         </p>
+                        <a href="https://github.com/DasherDo/sorting-algorithm-visualizer" target="_blank">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+				<div class="project shadow-large"  style="max-width: 1170px">
+                    <div class="project-image">
+                        <img src="images/sorting-algo.png" style="height: 300px"/>
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info" style="margin-left: 577px; width: 600px;">
+                        <h3>Messaging Website</h3>
+                        <p>
+							Website to message other users in real-time. You can create an account and message any other user. Made with the MERN stack. 
+						</p>
                         <a href="https://github.com/DasherDo/sorting-algorithm-visualizer">View Project</a>
                     </div>
                     <!-- End .project-info -->
